# llm-eval-framework

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: eval_ci.yml  tests.yml
configs/: custom_dataset_schema.md  models.yaml
dashboard/: app.py
data/: example_custom_eval.csv
results/: RESULTS.md  baseline.json
scripts/: run_eval.py  run_eval_ci.py  save_baseline.py
src/: evaluator.py
src/api/: main.py  schemas.py
src/ci/: regression_check.py
src/data/: dataset_loader.py
src/db/: repository.py  schema.sql
src/llm_eval_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/metrics/: base_metric.py  factual_accuracy.py  instruction_following.py  latency_cost.py  llm_judge.py
src/models/: base_client.py  groq_client.py  openai_client.py
tests/: test_clients.py  test_dataset_loader.py  test_metrics.py
